discussion/kv_engine/161740/161740_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Trace CM::queueLock

Change-Id: Ic325a1090de0debd8e54aa5f85b16648b9a24570

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-24 13:50:34.000000000
Message: 
Uploaded patch set 6: Patch Set 5 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-24 14:32:08.000000000
Message: 
Patch Set 6: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34376/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34376/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40390/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0117/0158]: control data traffic...(21 ms) OK


99% tests passed, 1 tests failed out of 410

Total Test time (real) = 678.70 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40390/ )

Timeout of a CTest test 410/410 Test #263: ep_testsuite.ephemeral.comp_passive ...........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40390/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12827/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "CheckpointVisitor::visitBucket");
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12827/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_visitor.cc:35:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12827/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13581/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [0042/0158]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2319 Test failed: `" (Expected `239616" to be less than or equal to `237568" - Unexpected fileSize for vbucket)
[2021-09-24T14:13:28.119Z] (225 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13581/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15222/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11615/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14435/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22707/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2459/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2493/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14696/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
